# aws-sam-sandbox

./: makefile
lambda-api/: README.md  makefile  pyproject.toml  template.yaml
lambda-api/hello_world/: app.py
lambda-api/lambda_app/: app.py  requirements.txt
lambda-api/lambda_app/templates/: example.html
